--- a/.gitignore
+++ b/.gitignore
@@ -257,3 +257,8 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+#ckpt
+output*/
+assests/
+pretrained/
